                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-10-2006 changed: keymap.xml: reintroduced 'B' as STOP while in videomenu since we didn't have any way to exit out from dvdmenu with controller.
 - 13-10-2006 fixed: http client wouldn't report failure to open on 404 errors from server
 - 11-10-2006 changed: better solution for multichar ftp listings, wich also fixes issues introduced in last attempt
 - 11-10-2006 added: [ 1574092 ] New Infolabel Musicplayer.DiscNumber, thanks to buttergemuese.
 - 11-10-2006 changed: Added building of Textures.xpr to build.bat, and removed Textures.xpr from CVS.
 - 11-10-2006 fixed: Partymode would repeat tracks if the next song was unavailable (server offline etc.)
 - 10-10-2006 fixed: ftp listings didn't do the string charset -> utf8 conversion. ftp listings are not normally utf8 unless requested (and only a few servers support it)
 - 10-10-2006 changed: Increased the seek timeout in RAR to 30 seconds to fix seeking over CCX with slow connection
 - 10-10-2006 updated: Swedish language file finetuned by Blittan & Pike
 - 09-10-2006 changed: Thumbnail loading in the playlists folder of library view is now background threaded.
 - 09-10-2006 fixed: filenames on fat memory units wich where very long (required >6 vfat entries) would chop of last part in some cases.
 - 09-10-2006 fixed: fat memory units with a sector size different from 512 would not load, now 512, 1024, 2048 and 4096 should be supported.
 - 07-10-2006 updated: Russian language file (Thnx to que_)
 - 07-10-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 07-10-2006 updated: Hungarian language file (Thnx to sigismund)